package chattp;

import "message.proto";

// option optimize_for = LITE_RUNTIME;

message B2BMessage
{
    required uint64 sequence_number = 1;

    enum B2BMessageType
    {
	SENDMESSAGE = 0;
	MESSAGESENT = 1;
    }

    required B2BMessageType type = 2;
    optional bool status = 3 [default = true];

    optional string channel_id = 4;                         // Maybe change to 'repeated' in future? (group messages etc)

    optional ChattpMessage mesg = 5;
}
